Added script and makefile for executing all example code. Added more examples and improved some code